unpackaged/objects/Sales_Incentive__c.object
<CustomObject>
    <fields>
        <fullName>Contest_Incentive_for_Secured_Loans__c</fullName>
        <label>Contest Incentive for Secured Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contest_Incentive_for_UCV__c</fullName>
        <label>Contest Incentive for UCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contest_Incentive_for_Unsecured_Loans__c</fullName>
        <label>Contest Incentive for Unsecured Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSA_Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSA/Connector</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Incentives</relationshipLabel>
        <relationshipName>Sales_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incentive_Forecast_For_Rural_Secure_Loan__c</fullName>
        <label>Incentive Forecast For Rural Secure Loan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_Forecast_For_UCV__c</fullName>
        <label>Incentive Forecast For UCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_Forecast_Rural_Unsecured_Loan__c</fullName>
        <label>Incentive Forecast Rural Unsecured Loan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_for_Rural_Secured_Loans__c</fullName>
        <label>Incentive for Rural Secured Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_for_Rural_Unsecured_Loans__c</fullName>
        <label>Incentive for Rural Un-secured Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_for_Secured_Loans__c</fullName>
        <label>Incentive for Secured Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_for_UCV__c</fullName>
        <label>Incentive for UCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_for_Unsecured_Loans__c</fullName>
        <label>Incentive for Unsecured Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_forecast_for_Secured_Loans__c</fullName>
        <label>Incentive Forecast For Secured Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_forecast_for_Unsecured_Loans__c</fullName>
        <label>Incentive Forecast For Unsecured Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager_Incentive__c</fullName>
        <label>Rural Manager Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Regular_Incentive_Amount__c</fullName>
        <label>Potential Regular Incentive Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Seasonal_Incentive_Amount__c</fullName>
        <label>Potential Seasonal Incentive Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regular_Incentive_Amount__c</fullName>
        <label>Regular Incentive Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salesperson_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson/Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Sales Incentives</relationshipLabel>
        <relationshipName>Sales_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seasonal_Incentive_Amount__c</fullName>
        <label>Seasonal Incentive Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Contest_Incentive_Amount__c</fullName>
        <formula>Contest_Incentive_for_Secured_Loans__c  +  Contest_Incentive_for_UCV__c  +  Contest_Incentive_for_Unsecured_Loans__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contest Incentive Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Forecast_Incentive_Amount__c</fullName>
        <formula>Incentive_forecast_for_Unsecured_Loans__c  +  Incentive_forecast_for_Secured_Loans__c + Incentive_Forecast_For_UCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecast Incentive Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Regular_Incentive_Amount__c</fullName>
        <formula>Incentive_for_Secured_Loans__c +  Incentive_for_Unsecured_Loans__c +  Incentive_for_UCV__c +  Incentive_for_Rural_Secured_Loans__c  +  Incentive_for_Rural_Unsecured_Loans__c + Manager_Incentive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Regular Incentive Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Sales Incentive</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Salesperson_Agent__c</columns>
        <columns>DSA_Connector__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Incentive_for_Secured_Loans__c</columns>
        <columns>Incentive_for_Unsecured_Loans__c</columns>
        <columns>Incentive_for_UCV__c</columns>
        <columns>Total_Regular_Incentive_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Incentives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>